--- a/recipes/app/views/devise/registrations/new.html.erb
+++ b/recipes/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
-<h2 class = "maincolor bigfont">Sign up</h2>
+<div class=container>
+  <h2 class = "maincolor bigfont">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
 
@@ -30,8 +31,9 @@
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
-<% end %>
-<p class = "maincolor">
-  <%= link_to 'Home','/hello.html' %> |
-  <%= link_to 'All Recipes', recipes_path %>
-</p>
+  <% end %>
+  <p class = "maincolor">
+    <%= link_to 'Home','/hello.html' %> |
+    <%= link_to 'All Recipes', recipes_path %>
+  </p>
+</div>
